syntax = "proto3";

package rivet.backend.pkg.team.user_ban_list;

import "legacy/proto/common.proto";

message Request {
	repeated rivet.common.Uuid team_ids = 1;
}

message Response {
	message Team {
		rivet.common.Uuid team_id = 1;
		repeated BannedUser banned_users = 2;
	}

	message BannedUser {
		rivet.common.Uuid user_id = 1;
		int64 ban_ts = 2;
	}

	repeated Team teams = 1;
}
